--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+body {
+  margin: 30px;
+}
+
+.counter {
+  border: 2px solid #ccc;
+  padding: 20px;
+  width: 150px;
+  text-align: center;
+  font-family: "Source Sans Pro";
+  color: #555;
+}
+
+.counter h2 {
+  margin: 0;
+  margin-bottom: 15px;
+  font-weight: 600;
+}
+
+.counter > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.count {
+  margin: 10px 20px;
+  font-size: 30px;
+  flex-basis: 40px;
+  flex-grow: 0;
+}
+
+.counter button {
+  border: 1px solid #ccc;
+  color: #666;
+  font-size: 20px;
+  line-height: 0;
+  height: 30px;
+  width: 70px;
+  transition: 0.2s all;
+}
+
+.counter button:active,
+.counter button:focus {
+  outline: none;
+  box-shadow: 0 0 2px rgb(87, 156, 87);
+}
+
+.counter button:active {
+  background-color: rgb(87, 156, 87);
+  border-color: rgb(35, 141, 35);
+  color: #fff;
 }
